--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,12 @@
+nav {
+  height: 3rem;
+  background-color: #2a2d43;
+  align-self: stretch;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+
+
 .games-container {
   display: flex;
   flex-wrap: wrap;
