--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   border: solid;
+  border-radius: 0.75rem;
+  overflow: hidden;
   width: 24rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .game-row {
@@ -10,6 +13,10 @@
 }
 
 .info-row {
+  background-color: #2a2d43;
+
+  color: white;
+
   display: flex;
   justify-content: flex-start;
   gap: 1rem;
