--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,12 @@ nav {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-
+.query-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
 
 .games-container {
   display: flex;
